--- a/excercises/js/todoAPI /styles.css
+++ b/excercises/js/todoAPI /styles.css
@@ -2,7 +2,9 @@
     border: 5px black solid;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+
     grid-template-rows: 100px, 100px, auto;
+    font-family: 'Roboto', sans-serif;
 
 }
 header {
@@ -15,13 +17,15 @@ form {
     grid-column: 1 / -1;
     display: flex;
     justify-content: center;
+    
     /* flex-direction: column; */
 }
 
 #items{
     display: grid;
     grid-gap: 5px;
-    grid-template-columns: repeat(3, 1fr);
+    /* grid-template-columns: repeat(4, 1fr); */
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
     grid-auto-rows: 200px;
     grid-column: 1/-1;
 }
@@ -30,9 +34,14 @@ form {
     padding: 10px;
 }
 
-#deleteBtn {
-    display: grid;
+.delete-button {
     background-color: red;
-    
-    
+    float: right;
 }
+
+
+@media only screen and (max-width: 600px) {
+    form {
+        flex-direction: column; 
+    }
+} 
