--- a/excercises/js/todoAPI 2/styles.css
+++ b/excercises/js/todoAPI 2/styles.css
@@ -21,7 +21,7 @@ form {
     /* flex-direction: column; */
 }
 
-#items{
+#content{
     display: grid;
     grid-gap: 5px;
     /* grid-template-columns: repeat(4, 1fr); */
@@ -29,7 +29,7 @@ form {
     grid-auto-rows: 200px;
     grid-column: 1/-1;
 }
-.todoItem {
+.todoDiv {
     border: 1px solid black;
     padding: 10px;
 }
