--- a/projects/wine-pair/client/src/styles.css
+++ b/projects/wine-pair/client/src/styles.css
@@ -319,23 +319,17 @@ textarea {
 /* /////////// ADD FORM */
 
 .addTextWrapper{
-    /* margin: 30px;
-    background-color: rgb(63, 28, 28, 0.705);
-    border: 1px solid black;
-    opacity: 0.3;
-    filter: alpha(opacity=60);      */    
-    /* display: flex;
-    flex-direction: column;
-    justify-content: center; */
     text-align: center;
     margin: auto;
     background-color: rgba(0, 0, 0, 0.24);
-    padding: 50px;
+    padding-top: 50px;
 }
 .addText{
     font-family: 'Playfair Display', serif;
     font-size: 1.3em;
     color: rgb(255, 255, 255);
+    margin-left: 5px;
+    margin-top: 5px;
 
 }
 .addForm{
