--- a/projects/portfolio-page/src/styles.css
+++ b/projects/portfolio-page/src/styles.css
@@ -218,7 +218,10 @@ a:active {
   font-size: 2.4em;
   margin: 10px;
 }
-.footerIcons a:visited {
+
+.footerIcons a:link,
+a:visited,
+a:active {
   color: white;
 }
 .footerIcons a:hover {
